welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:9: error: not found: value resume
resume nb
^countTeen:29: error: type mismatch;
 found   : Unit
 required: Int
} 
^